# Silk

./: .clangd  .gitattributes  .gitignore  LICENCE  README.md  TODO.md  silk.c  silk.h
docs/: README-API.md  README-Errors.md  README-MacroDefinitions.md  README-TypeDefinitions.md  README.md
examples/example_console/: README.md  main.c
examples/example_ppm/: README.md  main.c  output.ppm
examples/example_raylib/: CMakeLists.txt  README.md  main.c
examples/example_rgfw/: README.md  main.c
examples/example_sdl/: CMakeLists.txt  README.md  main.c
examples/example_stbi/: README.md  main.c  output.ppm
examples/example_template/: README.md  main.c
examples/example_win32/: README.md  main.c
examples/example_x11/: README.md  main.c
